fix z-index in actionBtn

--- a/components/ActionBtn/index.module.css
+++ b/components/ActionBtn/index.module.css
@@ -14,6 +14,7 @@
 }
 
 .actionBtn {
+  position: relative;
   width: 100%;
   height: 170px;
   display: flex;
